static/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Eczar&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap");
/* body border styling*/
.body {
  margin: 0;
  width: 100%;
  padding: 0;
  font-family: "Eczar" !important;
  background-color: #5ac5ff !important;
}

.html {
  margin: 0;
  width: 97%;
  padding: 0;
  font-family: "Eczar" !important;
  background-color: #5ac5ff !important;
}
/* logo styling*/
.logo {
  width: 200px;
  height: 200px;
  position: relative;
  border-radius: 10em;
}
/* navbar logo styling*/
.nav_logo {
  width: 35px;
  height: 35px;
  position: relative;
  border-radius: 10em;
}

/* background image styling*/
.bgimg-1 {
  background-image: url("/static/img/bg6.png");
  background-size: cover;
  position: relative;
  width: 100%;
}
/* hero image styling*/
.bgimg-2 {
  background-image: url("/static/img/bg4.png");
  background-position: center;
  background-size: cover;
  padding: 50px;
  background-clip: padding-box;
}
/* heading styling*/
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Eczar";
}

#recipe_cloud {
  width: 100%;
}
/* flash messages styling*/
.flashes {
  font-family: "Eczar";
  font-size: large;
}
/* recipe border styling*/
.recipe_card {
  width: 100%;
  border: 30px;
  height: 600px;
  border-width: 1px;
  margin-top: 10em;
  border-style: solid;
  text-align: left;
  padding: 20px;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-right: 55px;
  background-position: center;
  background-size: cover;
  font-family: "SpicyRice";
  background-image: url("/static/img/bg2flip.png");
  padding: 20px;
}

.get_recipe_card {
  width: 100%;
  border: 30px;
  height: 100%;
  border-width: 1px;
  margin-top: 5em;
  margin-bottom: 5em;
  border-style: solid;
  text-align: left;
  padding: 20px;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-right: 55px;
  background-position: center;
  background-size: cover;
  font-family: "SpicyRice";
  background-image: url("/static/img/bg2flip.png");
  padding: 20px;
}

/* recipe image styling*/
.card_img {
  max-width: 15em;
  height: 15em;
  border-radius: 10px;
  background-size: cover;
}

.card_img_get {
  max-width: 50em;
  height: 40em;
  border-radius: 10px;
  background-size: cover;
}
/* recipe CRUD border styling*/
.recipe_box {
  text-align: left;
  display: block;
  font-family: "SpicyRice";
  font-size: large;
  background-image: url("/static/img/bg5flip.png");
  width: 90%;
  border: 30px;
  height: 100%;
  border-width: 1px;
  margin-bottom: 3em;
  margin-top: 2em;
  border-style: solid;
  text-align: left;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-left: 20px;
  background-position: center;
  background-size: cover;
  padding: 20px;
}

.input {
  display: block;
}
/* text box border styling*/
.text_input {
  border-radius: 10px;
  background: linear-gradient(21deg, #5ac5ff, #c1d2ff);
  text-align: center;
  margin: 10px;
}
/* Login button*/
.log_but {
  border-radius: 10px;
  background: linear-gradient(21deg, #5ac5ff, #c1d2ff);
  text-align: center;
  float: right;
  margin: 5px;
}
/* number box border styling*/
.num_input {
  border-radius: 10px;
  background: linear-gradient(21deg, #5ac5ff, #c1d2ff);
  text-align: center;
  max-width: 50px;
}
/* login border styling*/
.login_box {
  text-align: left;
  display: block;
  font-family: "SpicyRice";
  font-size: large;
  background-image: url("/static/img/bg5flip.png");
  width: 90%;
  border: 30px;
  height: 100%;
  border-width: 1px;
  margin-bottom: 16em;
  margin-top: 2em;
  border-style: solid;
  text-align: left;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-left: 20px;
  background-position: center;
  background-size: cover;
  padding: 20px;
}
/* private policy styling*/
.private_pol {
  width: 100%;
  border: 30px;
  margin-left: 4px;
  margin-right: 4px;
  border-width: 1px;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-style: solid;
  text-align: left;
  display: inline-block;
  font-family: "SpicyRice";
  font-size: x-large;
  background: linear-gradient(21deg, #82cef7, #d6e1ff);
  padding: 50px;
}
/* FAQ and about styling*/
.faq {
  background-image: url("/static/img/bg2flip.png");
  background-size: cover;
  width: 90%;
  border: 30px;
  border-width: 1px;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-style: solid;
  text-align: left;
  display: inline-block;
  font-family: "SpicyRice";
  font-size: x-large;
  padding: 50px;
  margin: 10px;
}
/* footer styling*/
.footer {
  font-family: 'SpicyRice';
  background: #ffffff;
  height: 15%;
  text-align: center;
  margin-left: 1%;
  position: relative;
  position: -webkit-sticky;
  left: 0;
  bottom: 0;
  width: 100%;
  margin-bottom: auto;
  margin-top: 10em;
  font: 1.5em;
}
/* copyright styling*/
#copyright {
  background-color: rgba(63, 143, 228, 0.966);
  width: 102%;
}

